# cis1-core-native

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.txt  conanfile.py  readme.md
.tscis/: build.sh
cmake/scripts/: version_watcher.cmake
deploy/: cis.conf.example  deploy.py
deploy/pyinternal/core_test/: script.py
deploy/pyinternal/core_test_job_with_args/: job.conf  job.params  script.py
deploy/pyinternal/core_test_job_without_args/: script.py
deploy/pyinternal/shared_code/: cis.py
docs/: devguide.md
include/: actions.h  build.h  cis1_context.h  cis1_core.h  cis1_error_code.h  cis_version.h  context.h  context_interface.h  cron.h  error_code.h  fs_entry_adapter.h  fs_entry_interface.h  get_param.h  get_parent_id.h  get_value.h  ifstream_adapter.h  ifstream_interface.h  job.h  job_runner.h  job_runner_interface.h  logger.h  maintenance.h  ofstream_adapter.h  ofstream_interface.h  os.h  os_interface.h  process.h  read_istream_kv_str.h  session.h  session_interface.h  set_param.h  set_value.h  url_codec.h  utils.h  version.h.in  webui_session.h
src/: build.cpp  cis1_context.cpp  cis1_core.cpp  cis1_core_osdp.cpp  cis1_error_code.cpp  cis_cron.cpp  cis_cron_daemon.cpp  cis_version.cpp  context.cpp  cron.cpp  error_code.cpp  fs_entry_adapter.cpp  get_param.cpp  get_parent_id.cpp  get_value.cpp  getparam.cpp  getvalue.cpp  ifstream_adapter.cpp  job.cpp  job_runner.cpp  logger.cpp  maintenance.cpp  maintenance_impl.cpp  ofstream_adapter.cpp  os.cpp  os_interface.cpp  read_istream_kv_str.cpp  session.cpp  set_param.cpp  set_value.cpp  setparam.cpp  setvalue.cpp  startjob.cpp  url_codec.cpp  utils.cpp  webui_session.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
test_package/include/: context_mock.h  fs_entry_mock.h  ifstream_mock.h  job_runner_mock.h  ofstream_mock.h  os_mock.h  process_mock.h  session_mock.h  utils.h
test_package/src/: build.cpp  cron.cpp  get_param.cpp  get_value.cpp  init_context.cpp  invoke_session.cpp  job.cpp  prepare_build.cpp  read_istream_kv_str.cpp  set_param.cpp  set_value.cpp
